Drop the POC step. Organized all packages, implemented status functionality and credentials repository.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+application.name=FMI IP V6 DNS
 security.realm.name=www-realm
 session.timeout.seconds=3600
 database.url=jdbc:postgresql://127.0.0.1:5432/public?user=serpents&password=1234&sslmode=require
+dsn.zone.name=fmi.com
