--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ application.name=FMI IP V6 DNS
 security.realm.name=www-realm
 session.timeout.seconds=3600
 database.url=jdbc:postgresql://127.0.0.1:5432/public?user=serpents&password=1234&sslmode=require
-dsn.zone.name=fmi.com
+dsn.zone.name=.fmi.com
